# causalrl

./: .gitignore  CAUSAL_AGENT.md  CF_Q_MATH.md  PHASE2_README.md  README.md  REPORT.md  bandit_convergence_results.txt  pyproject.toml
configs/: bandit_comparison.yaml  bandit_comparison_all.yaml  depleting_resources.yaml  full_feedback_bandit.yaml  moving_obstacles.yaml  non_stationary_bandit.yaml  shifting_hazards.yaml  test_depleting_resources.yaml  test_moving_obstacles.yaml  test_shifting_hazards.yaml
results/benchmark/counterfactual_bandit/: summary.json
results/benchmark/standard_bandit/: summary.json
results/full_feedback/full_feedback_bandit/: summary.json
results/sweep/alpha_0.0_gamma_0.01/: config.yaml  summary.json
results/sweep/alpha_0.0_gamma_0.05/: config.yaml  rewards.json  summary.json
results/sweep/alpha_0.0_gamma_0.1/: config.yaml  rewards.json  summary.json
results/sweep/alpha_0.2_gamma_0.01/: config.yaml  summary.json
results/sweep/alpha_0.2_gamma_0.05/: config.yaml  summary.json
results/sweep/alpha_0.2_gamma_0.1/: config.yaml  summary.json
results/sweep/alpha_0.5_gamma_0.01/: config.yaml  summary.json
results/sweep/alpha_0.5_gamma_0.05/: config.yaml  rewards.json  summary.json
results/sweep/alpha_0.5_gamma_0.1/: config.yaml  rewards.json  summary.json
scripts/: evaluate.py  sweep_bandits.py  train.py
src/causalrl/: __init__.py
src/causalrl/core/: ofc.py  (+5 more)
tests/test_agents/: test_counterfactual_agent.py
tests/test_core/: test_ofc.py  test_prediction_error.py  test_world_model.py
tests/test_envs/: test_environments.py
(+48 files in other folders)
